# klaw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generic.txt  html_source_content.html  justfile  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  serve_output.txt
.github/workflows/: ci.yml  release.yml
.kilocode/rules/: dev_environment_setup.md  external_library_docs.md  importing_conventions.md  project_values.md  submodule_conventions.md
docs/: contributing.md  index.md
docs-build/: pyproject.toml
docs/css/: admonitions.css  font.css  (+7 more)
tasks/: 0001-prd-klaw-result.md  0002-prd-klaw-core-migration.md  0003-prd-klaw-runtime.md  0004-prd-ray-channels.md  0005-prd-msgspec-optimization.md  fearless-concurrency.md  hypothesis_ray_patterns.md  klaw-dbase-parallel-refactor-plan.md  library-ray-actors-findings.md  library-ray-patterns-advanced.md  library-ray-real-world-patterns.md  oracle-msgspec-guide.md  oracle-msgspec-recommendations.md  oracle-ray-actors-recommendations.md  oracle-ray-api-review-v2.md  oracle-ray-api-review-v3.md  oracle-ray-api-review-v4.md  orchestrator_stack_design.md  runtime-audit-findings.md  sunray-integration-plan.md  tasks-0001-prd-klaw-result.md  tasks-0002-prd-klaw-core-migration.md  tasks-0003-prd-klaw-runtime.md  tasks-0004-prd-ray-channels.md  tasks-0005-prd-msgspec-optimization.md
workspaces/python/klaw-core/: README.md  pyproject.toml
workspaces/python/klaw-core/src/klaw_core/: __init__.py  _another_module.py  _core.py  option.py  propagate.py  result.py  result_other.py
workspaces/python/klaw-core/src/klaw_core/_internal/: __init__.py  sync.py
workspaces/python/klaw-core/src/klaw_core/assertions/: __init__.py  safe.py
workspaces/python/klaw-core/src/klaw_core/async_/: __init__.py  cache.py  itertools.py  result.py
workspaces/python/klaw-core/src/klaw_core/compose/: __init__.py  deref.py  pipe.py
workspaces/python/klaw-core/src/klaw_core/decorators/: __init__.py  do.py  pipe.py  result.py  safe.py
workspaces/python/klaw-core/src/klaw_core/fn/: __init__.py  lambda_.py
workspaces/python/klaw-core/src/klaw_core/runtime/: __init__.py  _config.py  _logging.py  channels.py  errors.py  executor.py  types.py
workspaces/python/klaw-core/src/klaw_core/runtime/_backends/: __init__.py  local.py  ray.py
workspaces/python/klaw-core/src/klaw_core/runtime/channels/: __init__.py  broadcast.py  codec.py  factory.py  local.py  oneshot.py  protocols.py  stats.py  watch.py  wire.py
workspaces/python/klaw-core/src/klaw_core/runtime/channels/ray/: __init__.py  actor.py  constants.py
workspaces/python/klaw-core/src/klaw_core/typeclass/: __init__.py  core.py
workspaces/python/klaw-core/tests/: __init__.py  conftest.py  strategies.py  test_assertions.py  test_async.py  test_compose.py  test_decorators.py  test_fn.py  test_imports.py  test_option.py  test_result.py  test_smoke.py  test_typeclass.py
workspaces/python/klaw-core/tests/runtime/: __init__.py  conftest.py  docker-compose.ray.yml  test_backends.py  test_channels_broadcast.py  test_channels_factory.py  test_channels_local_impl.py  test_channels_oneshot.py  test_channels_protocol.py  test_channels_select.py  test_channels_watch.py  test_config.py  test_config_container.py  test_executor.py  test_executor_container.py  test_logging.py  test_task_handle.py  test_types.py
workspaces/python/klaw-core/tests/runtime/channels/: __init__.py  test_codec.py  test_wire.py
workspaces/python/klaw-core/tests/runtime/channels/ray/: __init__.py  test_actor.py
workspaces/python/klaw-result/: README.md  pyproject.toml  pytest.ini  ruff.toml
workspaces/python/klaw-result/benchmarks/: __init__.py  bench_option.py  bench_result.py  conftest.py
workspaces/python/klaw-result/src/klaw_result/: __init__.py
workspaces/python/klaw-result/src/klaw_result/_internal/: __init__.py  sync.py
workspaces/python/klaw-result/src/klaw_result/assertions/: __init__.py  safe.py
workspaces/python/klaw-result/src/klaw_result/async_/: __init__.py  cache.py  itertools.py  result.py
workspaces/python/klaw-result/src/klaw_result/compose/: __init__.py  deref.py  pipe.py
workspaces/python/klaw-result/src/klaw_result/decorators/: __init__.py  do.py  pipe.py  result.py  safe.py
workspaces/python/klaw-result/src/klaw_result/fn/: __init__.py  lambda_.py  placeholder.py
workspaces/python/klaw-result/src/klaw_result/typeclass/: __init__.py  core.py
workspaces/python/klaw-result/src/klaw_result/types/: __init__.py  option.py  propagate.py  result.py
workspaces/python/klaw-result/tests/: conftest.py  strategies.py  test_assertions.py  test_async.py  test_compose.py  test_decorators.py  test_fn.py  test_option.py  test_result.py  test_smoke.py  test_typeclass.py
workspaces/rust/klaw-core-ext/: Cargo.toml  pyproject.toml
workspaces/rust/klaw-core-ext/src/: lib.rs
workspaces/rust/klaw-core-ext/src/klaw_core_ext/: __init__.py
workspaces/rust/klaw-dbase/: Cargo.toml  pyproject.toml
workspaces/rust/klaw-dbase/data/: ABMG1112.dbc  DNAC1996.DBC  DNAC1997.DBC  DNAC1998.DBC  DNAC1999.DBC  RDPA2401.dbc  RDPA2402.dbc  RDPA2403.dbc  RDPA2404.dbc  RDPA2405.dbc  RDPA2406.dbc  temp-roundtrip-sids.dbc  test-cp850-output.dbf  test-pklib-sids.dbf  test-simple-roundtrip.dbf
workspaces/rust/klaw-dbase/klaw_dbase/: __init__.py  _dbase_rs.pyi  _scan.py  _sink.py  _utils.py
workspaces/rust/klaw-dbase/scripts/: demo_progress.py
workspaces/rust/klaw-dbase/src/: des.rs  lib.rs  progress.rs  py.rs  read.rs  read_compressed.rs  ser.rs  tests.rs  write.rs
workspaces/rust/klaw-dbase/tests/: conftest.py  test_module.py  test_scan.py  test_sink.py  utils.py
workspaces/rust/klaw-polars-ext/: Cargo.toml  pyproject.toml
workspaces/rust/klaw-polars-ext/src/: lib.rs
workspaces/rust/klaw-polars-ext/src/klaw_polars_ext/: __init__.py
workspaces/rust/klaw-random/: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  pyproject.toml
workspaces/rust/klaw-random/klaw_random/: __init__.py  _random_rs.pyi
workspaces/rust/klaw-random/src/: lib.rs  py.rs
workspaces/rust/klaw-random/tests/: test_random.py
(+40 files in other folders)
