[project]
name = "klaw-docs"
version = "0.1.0"
description = "Documentation build for klaw"
requires-python = ">=3.13"
dependencies = [
    "griffe>=1.13.0",
    "griffe-autodocstringstyle>=0.1.0",
    "griffe-fieldz>=0.1.0",
    "griffe-modernized-annotations>=0.1.0",
    "griffe-warnings-deprecated>=1.1.0",
    "mkdocs-click>=0.9.0",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-exporter>=6.2.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.7",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-macros-plugin>=1.3.9",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin>=1.2.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-print-site-plugin>=2.8",
    "mkdocs-pygments>=0.0.2",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-typer2>=0.1.5",
    "mkdocstrings-python",
    "mkdocstrings-shell>=1.0.4",
]

[tool.uv.sources]
mkdocstrings-python = { git = "ssh://git@github.com/pawamoy-insiders/mkdocstrings-python.git" }
mkdocs-material     = { git = "ssh://git@github.com/squidfunk/mkdocs-material-insiders.git", rev = "9.4.2-insiders-4.42.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
