[project]
name            = "klaw-core"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
authors         = [{ name = "Raphael Vaz", email = "raphael@wrath.codes" }]
requires-python = ">=3.13"
dependencies    = [
    "msgspec>=0.19.0",
    "wrapt>=1.17.3",
]

[build-system]
requires      = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
