[project]
name            = "klaw-core"
version         = "0.1.0"
description     = "Foundation package for the Klaw ecosystem: type-safe Result/Option types, async utilities, and functional composition for Python 3.13+."
readme          = "README.md"
authors         = [{ name = "klaw team" }]
requires-python = ">=3.13"
dependencies    = [
    "msgspec>=0.20.0",
    "wrapt>=1.17.2",
    "aioitertools>=0.13.0",
    "async-lru>=2.0.5",
    "aiologic>=0.16.0",
    "anyio>=4.12.0",
    "pyarrow>=19.0.0",
    "psutil>=5.9.0",
    "tenacity>=8.2.0",
    "structlog>=24.0.0",
    "diskcache>=5.6.0",
    "ray>=2.52.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-randomly>=4.0.1",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.1.1",
    "hypothesis>=6.148.7",
    "pytest-benchmark>=5.2.3",
    "mutmut>=3.4.0",
    "returns>=0.26.0",
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    "mimesis>=18.0.0",
    "python-on-whales>=0.79.0",
]
# Future extras (not yet implemented)
# dbase = ["klaw-dbase"]
# polars = ["klaw-polars"]
# all = ["klaw-core[dbase,polars]"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klaw_core"]

[tool.mutmut]
paths_to_mutate = "src/klaw_core/"
tests_dir = "tests/"
runner = "uv run pytest tests/ -x -q --tb=no"
