[project]
name            = "klaw-result"
version         = "0.1.0"
description     = "Type-safe, performant Result and Option types for Python 3.13+, inspired by Rust."
readme          = "README.md"
authors         = [{ name = "klaw team" }]
requires-python = ">=3.13"
dependencies    = [
    "msgspec>=0.19.0",
    "wrapt>=1.17.0",
    "aioitertools>=0.12.0",
    "async-lru>=2.0.0",
    "aiologic>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "pytest-benchmark>=5.0.0",
    "mutmut>=3.0.0",
    "returns>=0.23.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klaw_result"]
