[project]
name            = "klaw-result"
version         = "0.1.0"
description     = "Type-safe, performant Result and Option types for Python 3.13+, inspired by Rust."
readme          = "README.md"
authors         = [{ name = "klaw team" }]
requires-python = ">=3.13"
dependencies    = [
    "msgspec>=0.20.0",
    "wrapt>=1.17.2",
    "aioitertools>=0.13.0",
    "async-lru>=2.0.5",
    "aiologic>=0.16.0",
    "anyio>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-randomly>=4.0.1",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.1.1",
    "hypothesis>=6.148.7",
    "pytest-benchmark>=5.2.3",
    "mutmut>=3.4.0",
    "returns>=0.26.0",
    "mypy>=1.19.1",
    "ruff>=0.14.9",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klaw_result"]

[tool.mutmut]
paths_to_mutate = "src/klaw_result/"
tests_dir = "tests/"
runner = "uv run pytest tests/ -x -q --tb=no"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", "benchmarks/"]
