[project]
name = "klaw-core-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Vaz", email = "raphael@wrath.codes" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
klaw-core-ext = "klaw_core_ext:main"

[tool.maturin]
module-name = "klaw_core_ext._core"
python-packages = ["klaw_core_ext"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
